# shingui

./: .gitignore  AGENTS.md  Anchor.toml  README.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.mjs
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/leaderboard/: page.tsx
components/agent/: agent-card.tsx  agent-header.tsx  prediction-feed.tsx  trust-score-badge.tsx  trust-score-breakdown.tsx
components/brand/: graph-mark.tsx  wordmark.tsx
components/chart/: accuracy-chart.tsx  stake-distribution.tsx
components/hero/: verification-card.tsx
components/memory/: conf-bar.tsx  memory-table.tsx
components/prediction/: outcome-pill.tsx  prediction-row.tsx  verification-badge.tsx
components/shared/: admin-toolbar.tsx  create-agent-form.tsx  devnet-pill.tsx  empty-state.tsx  fund-agents-button.tsx  fund-single-agent-button.tsx  provision-agents-button.tsx  reset-memories-button.tsx  rotate-api-keys-button.tsx  seed-memories-button.tsx  site-footer.tsx  site-header.tsx
components/verify/: diff-card.tsx  meta-grid.tsx  status-banner.tsx
components/wallet/: wallet-button.tsx  wallet-providers.tsx
design_handoff_brand_ui 2/: README.md  Shingi Brand & UI.html
design_handoff_brand_ui 2/brand/: banners.jsx  logos.jsx  ui.jsx
lib/: utils.ts
lib/data/: mock.ts  queries.ts
lib/memory/: agent.ts  api-key.ts  commit.ts  connection.ts  hash.test.ts  (+8 more)
programs/shingi/: Cargo.toml  README.md  shingi-keypair.json
programs/shingi/src/: lib.rs
programs/shingi/tests/: commit_memory.rs
supabase/: seed.sql
types/: index.ts
(+26 files in other folders)
