[package]
name = "shingi"
version = "0.1.0"
description = "Shingi: tamper-proof memory commits for autonomous AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shingi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
litesvm = "0.6"
solana-sdk = "2.1"
